fix ths issue of prrofile photo not showing

--- a/src/components/Feed.css
+++ b/src/components/Feed.css
@@ -20,7 +20,6 @@
 
 .feed__input {
     flex: 1;
-    padding: 5px;
     margin-left: 10px;
     display: flex;
     border-radius: 15px;
